{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 563,
  "lineage": "6b7563aa-d5b8-1820-a77d-66c99b7ea070",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "WAFruleCollection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "firewall_hub",
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/azureFirewalls/firewall_hub/natRuleCollections/WAFrule",
            "name": "WAFrule",
            "priority": 400,
            "resource_group_name": "Hub",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "51.124.39.34"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "Spoke1-Spoke2",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.15.1.4",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "51.124.39.34"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "Spoke2-Spoke1",
                "protocols": [
                  "TCP",
                  "UDP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": [],
                "translated_address": "10.14.1.4",
                "translated_port": "3389"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall_Hub",
            "azurerm_public_ip.PublicIP",
            "azurerm_resource_group.Hub",
            "azurerm_subnet.AzureFirewallSubnet",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NetInterFace_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/networkInterfaces/Spoke2-TestVM-nic",
            "internal_domain_name_suffix": "wc2wlz1uylvexgko3q42ecmvzh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.15.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AE-07-57",
            "name": "Spoke2-TestVM-nic",
            "private_ip_address": "10.15.1.4",
            "private_ip_addresses": [
              "10.15.1.4"
            ],
            "resource_group_name": "Spoke2-Test",
            "virtual_machine_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Compute/virtualMachines/Spoke2-TestVM"
          },
          "dependencies": [
            "azurerm_resource_group.Test",
            "azurerm_subnet.Subnet1_test",
            "azurerm_virtual_network.VnetName_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "NetInterFace_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/networkInterfaces/Spoke1-DevVM-nic",
            "internal_domain_name_suffix": "twqkhn53keyutlgpjdt2bmzo5c.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.14.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AD-2A-B8",
            "name": "Spoke1-DevVM-nic",
            "private_ip_address": "10.14.1.4",
            "private_ip_addresses": [
              "10.14.1.4"
            ],
            "resource_group_name": "Spoke1-Dev",
            "virtual_machine_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Compute/virtualMachines/Spoke1-DevVM"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_subnet.Subnet1_dev",
            "azurerm_virtual_network.VnetName_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSGTest1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/networkSecurityGroups/NSG1_InOutTest",
            "location": "westeurope",
            "name": "NSG1_InOutTest",
            "resource_group_name": "Spoke2-Test",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "10.15.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Spoke2self_In",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.15.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "10.15.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Spoke2self_out",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.15.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSGTest2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/networkSecurityGroups/NSG2_Test",
            "location": "westeurope",
            "name": "NSG2_Test",
            "resource_group_name": "Spoke2-Test",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.13.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NSG2Test",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSGdev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/networkSecurityGroups/NSG1_InOutdev",
            "location": "westeurope",
            "name": "NSG1_InOutdev",
            "resource_group_name": "Spoke1-Dev",
            "security_rule": [
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "10.14.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Spoke2self_In",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.14.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "10.14.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Spoke2self_out",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.14.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSGdev2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/networkSecurityGroups/NSG2_dev",
            "location": "westeurope",
            "name": "NSG2_dev",
            "resource_group_name": "Spoke1-Dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.13.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "NSG2dev",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/publicIPAddresses/PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.39.34",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "PublicIP",
            "resource_group_name": "Hub",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Spoke1_2_Hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/routeTables/Spoke1TOhub",
            "location": "westeurope",
            "name": "Spoke1TOhub",
            "resource_group_name": "Spoke1-Dev",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "DefualtRoute",
                "next_hop_in_ip_address": "10.14.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "Spoke2_TO_Hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/routeTables/Spoke2TOhub",
            "location": "westeurope",
            "name": "Spoke2TOhub",
            "resource_group_name": "Spoke2-Test",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "DefaultRoute",
                "next_hop_in_ip_address": "10.15.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.13.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Hub",
            "virtual_network_name": "VnetHub"
          },
          "dependencies": [
            "azurerm_resource_group.Hub",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "HubSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.13.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/HubSubnet2",
            "name": "HubSubnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Hub",
            "virtual_network_name": "VnetHub"
          },
          "dependencies": [
            "azurerm_resource_group.Hub",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "HubSubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.13.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/HubSubnet3",
            "name": "HubSubnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Hub",
            "virtual_network_name": "VnetHub"
          },
          "dependencies": [
            "azurerm_resource_group.Hub",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet1_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.14.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1",
            "name": "DevSubnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke1-Dev",
            "virtual_network_name": "VnetDev"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_virtual_network.VnetName_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet1_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.15.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1",
            "name": "TestSubnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke2-Test",
            "virtual_network_name": "VnetTest"
          },
          "dependencies": [
            "azurerm_resource_group.Test",
            "azurerm_virtual_network.VnetName_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet2_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.14.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet2",
            "name": "DevSubnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke1-Dev",
            "virtual_network_name": "VnetDev"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_virtual_network.VnetName_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet2_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.15.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet2",
            "name": "TestSubnet2",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke2-Test",
            "virtual_network_name": "VnetTest"
          },
          "dependencies": [
            "azurerm_resource_group.Test",
            "azurerm_virtual_network.VnetName_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet3_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.14.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet3",
            "name": "DevSubnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke1-Dev",
            "virtual_network_name": "VnetDev"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_virtual_network.VnetName_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Subnet3_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.15.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet3",
            "name": "TestSubnet3",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Spoke2-Test",
            "virtual_network_name": "VnetTest"
          },
          "dependencies": [
            "azurerm_resource_group.Test",
            "azurerm_virtual_network.VnetName_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RouteAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1",
            "route_table_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/routeTables/Spoke1TOhub",
            "subnet_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_route_table.Spoke1_2_Hub",
            "azurerm_subnet.Subnet1_dev",
            "azurerm_virtual_network.VnetName_dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "RouteAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1",
            "route_table_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/routeTables/Spoke2TOhub",
            "subnet_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1"
          },
          "dependencies": [
            "azurerm_resource_group.Test",
            "azurerm_route_table.Spoke2_TO_Hub",
            "azurerm_subnet.Subnet1_test",
            "azurerm_virtual_network.VnetName_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetName_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.15.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e765b9b0-c274-4bea-994e-ec3dc20995cf",
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest",
            "location": "westeurope",
            "name": "VnetTest",
            "resource_group_name": "Spoke2-Test",
            "subnet": [
              {
                "address_prefix": "10.15.1.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet1",
                "name": "TestSubnet1"
              },
              {
                "address_prefix": "10.15.2.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet2",
                "name": "TestSubnet2"
              },
              {
                "address_prefix": "10.15.3.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/subnets/TestSubnet3",
                "name": "TestSubnet3"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetName_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.14.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b7a3a09d-51fd-4931-accf-48e7c0b32efa",
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev",
            "location": "westeurope",
            "name": "VnetDev",
            "resource_group_name": "Spoke1-Dev",
            "subnet": [
              {
                "address_prefix": "10.14.1.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet1",
                "name": "DevSubnet1"
              },
              {
                "address_prefix": "10.14.2.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet2",
                "name": "DevSubnet2"
              },
              {
                "address_prefix": "10.14.3.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/subnets/DevSubnet3",
                "name": "DevSubnet3"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VnetName_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.13.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3a5ddf0a-8f9e-4d4e-b114-b4763708094e",
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub",
            "location": "westeurope",
            "name": "VnetHub",
            "resource_group_name": "Hub",
            "subnet": [
              {
                "address_prefix": "10.13.1.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.13.2.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/HubSubnet2",
                "name": "HubSubnet2"
              },
              {
                "address_prefix": "10.13.3.0/24",
                "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/subnets/HubSubnet3",
                "name": "HubSubnet3"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.Hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Hub_ToSpoke1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/virtualNetworkPeerings/HubToSpoke1",
            "name": "HubToSpoke1",
            "remote_virtual_network_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev",
            "resource_group_name": "Hub",
            "use_remote_gateways": false,
            "virtual_network_name": "VnetHub"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_resource_group.Hub",
            "azurerm_virtual_network.VnetName_dev",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Hub_ToSpoke2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub/virtualNetworkPeerings/HubToSpoke2",
            "name": "HubToSpoke2",
            "remote_virtual_network_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest",
            "resource_group_name": "Hub",
            "use_remote_gateways": false,
            "virtual_network_name": "VnetHub"
          },
          "dependencies": [
            "azurerm_resource_group.Hub",
            "azurerm_resource_group.Test",
            "azurerm_virtual_network.VnetName_Test",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Spoke1_ToHub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke1-Dev/providers/Microsoft.Network/virtualNetworks/VnetDev/virtualNetworkPeerings/Spoke1ToHub",
            "name": "Spoke1ToHub",
            "remote_virtual_network_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub",
            "resource_group_name": "Spoke1-Dev",
            "use_remote_gateways": false,
            "virtual_network_name": "VnetDev"
          },
          "dependencies": [
            "azurerm_resource_group.Dev",
            "azurerm_resource_group.Hub",
            "azurerm_virtual_network.VnetName_dev",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "Spoke2_ToHub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Spoke2-Test/providers/Microsoft.Network/virtualNetworks/VnetTest/virtualNetworkPeerings/Spoke2ToHub",
            "name": "Spoke2ToHub",
            "remote_virtual_network_id": "/subscriptions/8eb5145b-7755-47c0-9a1e-8c1de53a4e23/resourceGroups/Hub/providers/Microsoft.Network/virtualNetworks/VnetHub",
            "resource_group_name": "Spoke2-Test",
            "use_remote_gateways": false,
            "virtual_network_name": "VnetTest"
          },
          "dependencies": [
            "azurerm_resource_group.Hub",
            "azurerm_resource_group.Test",
            "azurerm_virtual_network.VnetName_Test",
            "azurerm_virtual_network.VnetName_hub"
          ]
        }
      ]
    }
  ]
}